# IDN-16

./: .gitignore  CMakeLists.txt  README.md  assembler  dasmblr  lex.yy.c  makefile  parser.tab.c  parser.tab.h  startup.asm  system.asm  test_cpu  test_memory
include/: cpu.h  instructions.h  memory.h
include/idn16/: asmblr.h  codegen.h  cpu.h  dasm.h  instructions.h  memory.h  symbol_table.h
include/idn16/io/: audio.h  display.h  keyboard.h
lib/clay/SDL2/: clay_renderer_SDL2.c
lib/clay/SDL3/: clay_renderer_SDL3.c
resources/test_programs/: idn16_animation.asm  snake.asm  test_small.asm
src/: main.c
src/core/: assembler.c  cpu.c  cpu.h  instructions.c  instructions.h  keyboard.c  keyboard.h  memory.c  memory.h  runner.c  syscalls.c
src/core/IO/: display.c  display.h  keyboard.c  keyboard.h
src/core/fonts/: FreeMonoOblique.ttf:Zone.Identifier
src/core/io/: audio.c  display.c  keyboard.c
src/tests/: example.asm  test_codegen.c  test_cpu.c  test_disassembler.c  test_memory.c  test_symbol_table.c
src/tools/: assembler.c  codegen.c  codegen.h  dasm.c  disassembler.c  lexer.c  lexer.h  parser.c  parser.h  symbols.c  symbols.h
src/tools/assembler/: asm_main.c  asmblr  codegen.c  codegen.h  lex.yy.c  lexer.l  parser.tab.c  parser.tab.h  parser.y  symbol_table.c  symbol_table.h
src/tools/disassembler/: dasm.c  disassembler.c
tests/core/: test_audio.c  test_cpu.c  test_error_handling.c  test_memory.c  test_syscalls.c
tests/tools/: test_codegen.c  test_disassembler.c  test_symbol_table.c
